<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/posts_list"
        android:title="@string/posts_section"
        app:showAsAction="always" />

    <item
        android:id="@+id/events_list"
        android:title="@string/events_section"
        app:showAsAction="always" />

    <group android:id="@+id/unauthorized">
        <item
            android:id="@+id/login"
            android:title="@string/log_in"/>
        <item
            android:id="@+id/register"
            android:title="@string/register_item"/>
    </group>

    <group android:id="@+id/authorized">
        <item
            android:id="@+id/jobs_list"
            android:title="@string/jobs_item"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout_item"/>
    </group>

</menu>