<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.LoginFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_indent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/auth_view_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="
                auth_title, login_button
            "/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/reg_view_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="
                reg_title, name_field,
                confirm_password_field,
                reg_button, add_avatar_image
            "/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/common_view_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="
                login_field, password_field,
                cancel_button
            "/>

        <TextView
            android:id="@+id/auth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_indent"
            android:text="@string/auth_title"
            android:textSize="@dimen/title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/reg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_indent"
            android:text="@string/reg_title"
            android:textSize="@dimen/title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auth_title"
            />

        <ImageView
            android:id="@+id/add_avatar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.MenuButton"
            app:srcCompat="@drawable/ic_add_avatar_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/name_field"
            android:contentDescription="@string/add_avatar" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/avatar_preview_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="
                avatar_preview, clear_avatar
            " />

        <ImageView
            android:id="@+id/avatar_preview"
            android:layout_width="@dimen/avatar_preview"
            android:layout_height="@dimen/avatar_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/avatar_preview"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.ClearAvatarButton"
            app:icon="@drawable/ic_cancel_or_clear_24"
            app:layout_constraintEnd_toEndOf="@id/avatar_preview"
            app:layout_constraintTop_toTopOf="@id/avatar_preview"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_field"
            style="@style/Widget.AppTheme.NeWorkOutlinedTextInput"
            android:paddingTop="@dimen/main_indent"
            android:hint="@string/name_field"
            app:layout_constraintTop_toBottomOf="@id/reg_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_field"
            style="@style/Widget.AppTheme.NeWorkOutlinedTextInput"
            android:hint="@string/login_item"
            app:layout_constraintTop_toBottomOf="@id/name_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            style="@style/Widget.AppTheme.NeWorkOutlinedTextInput"
            app:endIconMode="password_toggle"
            android:hint="@string/password_field"
            app:layout_constraintTop_toBottomOf="@id/login_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_field"
            style="@style/Widget.AppTheme.NeWorkOutlinedTextInput"
            app:endIconMode="password_toggle"
            android:hint="@string/confirm_password_field"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/passwords_dont_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_don_t_match"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_field"
            app:layout_constraintStart_toStartOf="@id/confirm_password_field"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_field" />

        <TextView
            android:id="@+id/wrong_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/wrong_login_password"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="@id/confirm_password_field"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_field"
            app:layout_constraintTop_toBottomOf="@id/passwords_dont_match" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="wrong_login_password"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.NeWorkOutlinedButton"
            android:layout_marginEnd="@dimen/main_indent"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/reg_button"
            app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.NeWorkOutlinedButton"
            android:layout_marginEnd="@dimen/main_indent"
            android:text="@string/register_item"
            app:layout_constraintEnd_toStartOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.NeWorkOutlinedButton"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
            />

        <include
            android:id="@+id/progress_bar_view"
            android:visibility="gone"
            layout="@layout/progress_bar_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>