<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.EditJobFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit_job_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="
            position, company_name,
            job_duration_input, link_field
        " />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/position"
        style="@style/Widget.AppTheme.RequiredToFill"
        android:layout_width="match_parent"
        android:hint="@string/position_field"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/company_name"
        style="@style/Widget.AppTheme.RequiredToFill"
        android:layout_width="match_parent"
        android:hint="@string/company_name_field"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/job_duration_input"
        layout="@layout/job_duration_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/link_field"
        android:layout_width="match_parent"
        style="@style/Widget.AppTheme.NeWorkOutlinedTextInput"
        android:hint="@string/link_the_word">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppTheme.ParticipantsIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_required_to_fill_12"
        app:iconSize="@dimen/card_padding"
        android:text="@string/must_be_filled"
        android:textAlignment="viewStart"
        />


    <include
        android:id="@+id/progress_bar_view"
        layout="@layout/progress_bar_view"/>

</LinearLayout>